fix: added scroll for overflow

--- a/style.css
+++ b/style.css
@@ -55,8 +55,16 @@ textarea {
 .main-output {
   display: block;
   border: 1px solid grey;
+  max-height: 18vh;
+  overflow: scroll;
 }
 
 .main-outputheader {
   margin-top: 0.5rem;
+}
+
+footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
